# pet-medical-records

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  services.py
app/api/: routes.py
app/mcp/: __init__.py  server.py  tool_layer.py
app/storage/: local.py
docs/: API.md  runtimeEnvironment.md  scenario.md  softwareArchitecture.md
docs/plans/: 2026-06-08-epic-a-safe-delete-visibility-restore.md
skills/pet-medical-records/: SKILL.md
skills/pet-medical-records-line-platform/: SKILL.md
tests/: TEST_REPORT.md  conftest.py  helpers.py  test_mcp_delete_restore_preview.py  test_mcp_tool_layer.py  test_rest_api.py  test_rest_api_missing_coverage.py  test_soft_delete_visibility.py
